# Copyright (c) 2023 Ian C. Good
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'proxy-protocol'
version = '0.9.1'
authors = [
    { name = 'Ian Good', email = 'ian@icgood.net' },
]
description = 'PROXY protocol library with asyncio server implementation'
license = { file = 'LICENSE.md' }
readme = { file = 'README.md', content-type = 'text/markdown' }
requires-python = '~=3.8'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Topic :: Communications :: Email :: Post-Office',
    'Topic :: Communications :: Email :: Post-Office :: IMAP',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    'typing-extensions',
]

[project.optional-dependencies]
crc32c = ['crc32c ~= 2.2']

[project.urls]
homepage = 'https://github.com/icgood/proxy-protocol/'

[project.scripts]
proxyprotocol-server = 'proxyprotocol.server.main:main'
proxyprotocol-echo = 'proxyprotocol.server.echo:main'

[tool.hatch.build]
exclude = ['/tasks', '/doc', '/.github']

[tool.mypy]
strict = true
files = ['proxyprotocol', 'test']

[[tool.mypy.overrides]]
module = 'crc32c.*'
ignore_missing_imports = true

[tool.bandit]
skips = ['B101']

[tool.pytest.ini_options]
testpaths = 'test'
norecursedirs = 'doc'

[tool.coverage.report]
fail_under = 100
omit = ['*/reader.py', '*/server/*']
exclude_lines = [
    'pragma: no cover',
    'NotImplemented',
    '^\s*...\s*$',
    'def __repr__',
]
