# Copyright (c) 2023 Ian C. Good
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
# THE SOFTWARE.
#

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'proxy-protocol'
authors = [
    { name = 'Ian Good', email = 'ian@icgood.net' },
]
description = 'PROXY protocol library with asyncio server implementation'
license = { file = 'LICENSE.md' }
readme = { file = 'README.md', content-type = 'text/markdown' }
requires-python = '~=3.8'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dependencies = [
    'typing-extensions',
]
dynamic = ['version']

[project.optional-dependencies]
crc32c = ['crc32c ~= 2.2']

[project.urls]
'Homepage' = 'https://github.com/icgood/proxy-protocol/'
'API Documentation' = 'https://icgood.github.io/proxy-protocol/'
'Docker Image' = 'https://github.com/icgood/proxy-protocol/pkgs/container/proxy-protocol'

[project.scripts]
proxyprotocol-server = 'proxyprotocol.server.main:main'
proxyprotocol-echo = 'proxyprotocol.server.echo:main'

[tool.hatch.version]
path = 'proxyprotocol/__about__.py'

[tool.hatch.build]
exclude = [
    '/.dockerignore',
    '/doc',
    '/docker',
    '/.github',
]

[tool.hatch.build.targets.wheel]
packages = ['proxyprotocol']

[tool.mypy]
strict = true
files = ['proxyprotocol', 'test']

[[tool.mypy.overrides]]
module = 'crc32c.*'
ignore_missing_imports = true

[tool.bandit]
skips = ['B101']

[tool.pytest.ini_options]
testpaths = 'test'
norecursedirs = 'doc'

[tool.coverage.report]
fail_under = 100
omit = ['*/__about__.py', '*/reader.py', '*/server/*']
exclude_lines = [
    'pragma: no cover',
    'NotImplemented',
    '^\s*...\s*$',
    'def __repr__',
]

[tool.hatch.envs.default]
dependencies = [
    'mypy',
    'pytest',
    'pytest-cov',
    'flake8',
    'flake8-annotations',
    'flake8-bugbear',
    'bandit[toml]',
]
features = ['crc32c']

[tool.hatch.envs.default.scripts]
run-pytest = 'py.test --cov-report=term-missing --cov=proxyprotocol'
run-mypy = 'mypy proxyprotocol test'
run-flake8 = 'flake8 proxyprotocol test'
run-bandit = 'bandit -c pyproject.toml -qr proxyprotocol'
check = ['run-pytest', 'run-mypy', 'run-flake8', 'run-bandit']

[[tool.hatch.envs.all.matrix]]
python = ['3.8', '3.9', '3.10', '3.11']

[tool.hatch.envs.doc]
dependencies = [
    'sphinx',
    'sphinx-autodoc-typehints',
    'cloud_sptheme',
]

[tool.hatch.envs.doc.scripts]
build = 'make -C doc html'
browse = ['build', 'open doc/build/html/index.html']
